[tool.poetry]
name = "made-with-ml"
version = "0.1.0"
description = "MLOPs course"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
jupyter = "^1.0.0"
imblearn = "^0.0"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
nltk = "^3.8.1"
transformers = "^4.37.2"
ray = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
